@@ -4,6 +4,8 @@ IN DEVELOPMENT ======= 1.3.2 (HOTFIX)
 - added: unauthorize flag
 - added: config['allow-compress-html'] (default: true)
 - added: controller.language (read from request.language)
+- added: String.prototype.linker([max])
+- added: framework sets response['Content-Length'] for some static files
 
 - updated: debug.js (added "source")
 
@@ -12,6 +14,8 @@ IN DEVELOPMENT ======= 1.3.2 (HOTFIX)
 - fixed: routing priority
 - fixed: config['allow-gzip']
 - fixed: utils.decode()
+
+- removed: String.prototype.link([max])
 
 ======= 1.3.1 (HOTFIX)
 
